# simple-http-server

./: .env.example  .flake8  .gitignore  .pylintrc  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
src/http/: __init__.py  client.py  server.py
src/simple_http_server/: __init__.py  main.py
src/socket/: socketserver.py
src/socketserver/: socketserver.py
tests/: test_http_method.py  test_http_status.py  test_main.py  test_server.py  test_socketserver.py
